# toyo-battery

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
ORIGIN_SETUP/: index.html
api/cell/: index.html
api/core/: index.html
api/io/: index.html
api/plotting/: index.html
docs/: ORIGIN_SETUP.md  index.md  quickstart.md
docs/api/: cell.md  core.md  io.md  plotting.md
quickstart/: index.html
search/: search_index.json
src/echemplot/: __init__.py  cli.py  config.py
src/echemplot/core/: __init__.py  capacity.py  cell.py  chdis.py  dqdv.py  stats.py
src/echemplot/gui/: __init__.py  __main__.py  _controller.py  tk_app.py
src/echemplot/io/: __init__.py  reader.py  schema.py
src/echemplot/origin/: __init__.py  _plots.py  _worksheets.py
src/echemplot/origin/templates/: README.md  charge_discharge.otpu
src/echemplot/plotting/: matplotlib_backend.py  plotly_backend.py
src/toyo_battery/: __init__.py  cli.py
src/toyo_battery/core/: __init__.py  capacity.py  cell.py  chdis.py  dqdv.py  stats.py
src/toyo_battery/gui/: __init__.py  __main__.py  _controller.py  tk_app.py
src/toyo_battery/io/: __init__.py  reader.py  schema.py  smb.py
src/toyo_battery/origin/: __init__.py  _plots.py  _worksheets.py
src/toyo_battery/origin/templates/: README.md  cycle_efficiency.otpu  dqdv.otpu
src/toyo_battery/plotting/: __init__.py  matplotlib_backend.py  plotly_backend.py
tests/: conftest.py  test_capacity.py  test_cell.py  test_chdis.py  test_cli.py  test_dqdv.py  test_gui.py  test_matplotlib_backend.py  test_origin.py  test_origin_launcher.py  test_parity.py  test_plotly_backend.py  test_reader.py  test_schema.py  test_smoke.py  test_stats.py
tests/legacy_v201/: README.md  conftest.py  test_reader_v201_quirks.py
