[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "toyo-battery"
version = "0.0.1"
description = "OSS Python toolkit for TOYO battery cycler data (charge/discharge, dQ/dV, cycle stats). Installable from PyPI into Origin's embedded Python."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "tomooki", email = "tomooki0414@gmail.com" }]
keywords = ["battery", "electrochemistry", "cycler", "origin", "toyo", "dQdV"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.23",
    "pandas>=2.0",
    "scipy>=1.10",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]
plotly = ["plotly>=5.18", "kaleido>=0.2.1"]
gui = ["matplotlib>=3.7"]
smb = ["pysmb>=1.2.9"]
cli = ["typer>=0.12", "rich>=13"]
origin = []
all = [
    "matplotlib>=3.7",
    "plotly>=5.18",
    "kaleido>=0.2.1",
    "pysmb>=1.2.9",
    "typer>=0.12",
    "rich>=13",
]

[project.scripts]
toyo-battery = "toyo_battery.cli:app"

[project.urls]
Homepage = "https://github.com/tomooki/toyo-battery"
Issues = "https://github.com/tomooki/toyo-battery/issues"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.7",
    "mypy>=1.11",
    "pandas-stubs",
    "types-setuptools",
    "matplotlib>=3.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/toyo_battery"]

[tool.hatch.build.targets.sdist]
include = [
    "src/toyo_battery",
    "tests",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803"]

[tool.mypy]
python_version = "3.9"
strict = true
files = ["src/toyo_battery"]
plugins = []

[[tool.mypy.overrides]]
module = ["smb.*", "originpro.*", "scipy.*", "matplotlib.*", "plotly.*", "kaleido.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["toyo_battery"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
